After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705957 - pcapparse: crash due to bad unref
pcapparse: crash due to bad unref
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Mac OS
: Normal normal
: 1.0.10
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-14 04:58 UTC by Zaheer Abbas Merali
Modified: 2013-08-28 22:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix (854 bytes, patch)
2013-08-14 04:58 UTC, Zaheer Abbas Merali
committed Details | Review

Description Zaheer Abbas Merali 2013-08-14 04:58:18 UTC
Created attachment 251565 [details] [review]
patch to fix

gst-launch fakesrc ! pcapparse ! fakesink causes crash. This is due to a bad unref.
Comment 1 Sebastian Dröge (slomo) 2013-08-14 08:48:42 UTC
commit 131c263248a537b5c482775f5a1e3822e30f1466
Author: Zaheer Abbas Merali <zaheermerali@gmail.com>
Date:   Wed Aug 14 10:47:31 2013 +0200

    pcapparse: Remove unneeded unref and only set pad caps if we have caps
    
    Fixes crashes due to invalid unrefs.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705957
Comment 2 Tim-Philipp Müller 2013-08-28 22:15:50 UTC
Cherry-picked this into 1.0 branch for 1.0.10.