pcapparse: Remove unneeded unref and only set pad caps if we have caps

Fixes crashes due to invalid unrefs.

https://bugzilla.gnome.org/show_bug.cgi?id=705957